fix: 解决无法提交commit问题

--- a/.github/workflows/rq-sigin-sync.yml
+++ b/.github/workflows/rq-sigin-sync.yml
@@ -42,6 +42,8 @@ jobs:
         python scripts/rq/rq_sgin.py
     - name: Push new cookie
       run: |
+        git config --local user.email "${{ env.GITHUB_EMAIL }}"
+        git config --local user.name "${{ env.GITHUB_NAME }}"
         git add .
         git commit -m 'update rq cookie' || echo "nothing to commit"
         git push || echo "nothing to push"
