--- a/.github/workflows/garmin-sports-sync.yml
+++ b/.github/workflows/garmin-sports-sync.yml
@@ -58,6 +58,8 @@ jobs:
         python scripts/garmin/garmin_sync.py
     - name: Push new cookie
       run: |
+        git config --local user.email "${{ env.GITHUB_EMAIL }}"
+        git config --local user.name "${{ env.GITHUB_NAME }}"
         git add .
         git commit -m 'update garmin cookie' || echo "nothing to commit"
         git push || echo "nothing to push"
