--- a/.github/workflows/rq-sigin-sync-test.yml
+++ b/.github/workflows/rq-sigin-sync-test.yml
@@ -1,9 +1,10 @@
-name: rq-sigin-sync
+name: rq-sigin-sync-test
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '30 9,10,16 * * *'
+  push:
+  pull_request:
+    branches: [ dev ]
+
 env:
   GITHUB_NAME: XiaoSiHwang
   GITHUB_EMAIL: 1009326507@qq.com
