--- a/.github/workflows/rq-sigin-sync-test.yml
+++ b/.github/workflows/rq-sigin-sync-test.yml
@@ -6,8 +6,8 @@ on:
     branches: [ dev ]
 
 env:
-  GITHUB_NAME: XiaoSiHwang
-  GITHUB_EMAIL: 1009326507@qq.com
+  # GITHUB_NAME: XiaoSiHwang
+  # GITHUB_EMAIL: 1009326507@qq.com
   AESKEY: ${{ secrets.AESKEY }}
   RQ_EMAIL: ${{ secrets.RQ_EMAIL }}
   RQ_PASSWORD: ${{ secrets.RQ_PASSWORD }}
@@ -35,17 +35,23 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.9.15"
+    - name: Cache PIP
+      uses: actions/cache@v2
+      with:
+        path: ${{ steps.set_variables.outputs.PIP_CACHE }}
+        key: Ubuntu-pip-${{ steps.set_variables.outputs.PY }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
+      if: steps.pip-cache.outputs.cache-hit != 'true'
     - name: Run RQ Sigin Sync
       run: |
         python scripts/rq/rq_sgin.py
     - name: Push new cookie
+      # git config --local user.email "${{ env.GITHUB_EMAIL }}"
+      # git config --local user.name "${{ env.GITHUB_NAME }}"
       run: |
-        git config --local user.email "${{ env.GITHUB_EMAIL }}"
-        git config --local user.name "${{ env.GITHUB_NAME }}"
         git add .
         git commit -m 'update rq cookie' || echo "nothing to commit"
         git push || echo "nothing to push"
