--- a/.github/workflows/garmin-sports-sync-test.yml
+++ b/.github/workflows/garmin-sports-sync-test.yml
@@ -6,8 +6,8 @@ on:
     branches: [ dev ]
 
 env:
-  # GITHUB_NAME: XiaoSiHwang
-  # GITHUB_EMAIL: 1009326507@qq.com
+  GITHUB_NAME: XiaoSiHwang
+  GITHUB_EMAIL: 1009326507@qq.com
   AESKEY: ${{ secrets.AESKEY }}
   SOURCE_GARMIN_AUTH_DOMAIN: ${{ secrets.SOURCE_GARMIN_AUTH_DOMAIN }}
   SOURCE_GARMIN_EMAIL: ${{ secrets.SOURCE_GARMIN_EMAIL }}
@@ -61,7 +61,8 @@ jobs:
         python scripts/garmin/garmin_sync.py
     - name: Push new cookie
       run: |
-        
+        git config --local user.email "${{ env.GITHUB_EMAIL }}"
+        git config --local user.name "${{ env.GITHUB_NAME }}"
         git add .
         git commit -m 'update garmin cookie' || echo "nothing to commit"
         git push || echo "nothing to push"
