--- a/.github/workflows/garmin-sports-sync.yml
+++ b/.github/workflows/garmin-sports-sync.yml
@@ -53,7 +53,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
+      if: steps.pip-cache.outputs.cache-hit != 'true'
     - name: Run Garmin Sync
       run: |
         python scripts/garmin/garmin_sync.py
