--- a/.github/workflows/rq-sigin-sync.yml
+++ b/.github/workflows/rq-sigin-sync.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '30 9,10,16 * * *'
+
 env:
   GITHUB_NAME: XiaoSiHwang
   GITHUB_EMAIL: 1009326507@qq.com
@@ -30,18 +31,31 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.9.15
+    - name: Set up Python 3.8.2
       uses: actions/setup-python@v3
       with:
-        python-version: "3.9.15"
+        python-version: "3.8.2"
+    # from pdm
+    - name: Set Variables
+      id: set_variables
+      run: |
+        echo "::set-output name=PY::$(python -c 'import hashlib, sys;print(hashlib.sha256(sys.version.encode()+sys.executable.encode()).hexdigest())')"
+        echo "::set-output name=PIP_CACHE::$(pip cache dir)"
+    - name: Cache PIP
+      uses: actions/cache@v2
+      with:
+        path: ${{ steps.set_variables.outputs.PIP_CACHE }}
+        key: Ubuntu-pip-${{ steps.set_variables.outputs.PY }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
+      if: steps.pip-cache.outputs.cache-hit != 'true'
     - name: Run RQ Sigin Sync
       run: |
         python scripts/rq/rq_sgin.py
     - name: Push new cookie
+      
       run: |
         git config --local user.email "${{ env.GITHUB_EMAIL }}"
         git config --local user.name "${{ env.GITHUB_NAME }}"
