--- a/.github/workflows/garmin-sports-sync-test.yml
+++ b/.github/workflows/garmin-sports-sync-test.yml
@@ -56,6 +56,16 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
       if: steps.pip-cache.outputs.cache-hit != 'true'
+    - name: Cache DB
+      id: cache-db
+      uses: actions/cache@v2
+      with:
+        path: db
+        key: ${{ runner.os }}-db-${{ hashFiles('garmin.db') }}-${{ hashFiles('rq.db') }}
+        restore-keys: |
+           ${{ runner.os }}-db-
+    - name: Init DB
+      if: steps.pip-cache.outputs.cache-hit != 'true'  
     - name: Run Garmin Sync
       run: |
         python scripts/garmin/garmin_sync.py
