--- a/.github/workflows/rq-sigin-sync.yml
+++ b/.github/workflows/rq-sigin-sync.yml
@@ -6,8 +6,8 @@ on:
     - cron: '30 9,10,16 * * *'
 
 env:
-  GITHUB_NAME: XiaoSiHwang
-  GITHUB_EMAIL: 1009326507@qq.com
+  GITHUB_NAME: elingsoft
+  GITHUB_EMAIL: wangzb@elingsoft.com
   AESKEY: ${{ secrets.AESKEY }}
   RQ_EMAIL: ${{ secrets.RQ_EMAIL }}
   RQ_PASSWORD: ${{ secrets.RQ_PASSWORD }}
